[package]
name = "minijinja-vault"
version = "0.1.0"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
minijinja = "1"
vaultrs = "0.7.0"
vaultrs-login = "0.1"
serde_json = "1.0"
