[package]
name = "minijinja-vault"
version = "0.1.0"
edition = "2021"

[lib]


[[bin]]
name = "minijinja-vault"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
minijinja = "2"
vaultrs = "0.7"
vaultrs-login = { version = "0.2", features = ["tokio", "oidc"] }
serde_json = "1"
webbrowser = "1.0.4"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
