[package]
name = "minijinja-vault"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt"] }
minijinja = "2"
vaultrs = "0.7"
vaultrs-login = { version = "0.2", features = ["tokio", "oidc"] }
serde_json = "1"
webbrowser = "1.0.4"
tracing = "0.1.41"