[package]
name = "minijinja-vault-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja-vault = { path = "../../minijinja-vault" }
minijinja = "2"
dotenv = "0.15.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"